# wishd

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  App.tsx  README.md  build.gradle.kts  docker-compose.yml  package.json  settings.gradle.kts
.claude/: launch.json
backend/: .env.template  .gitignore  README.md  config.py  main.py  package.json  pyproject.toml  requirements.txt  runtime.py  tsconfig.json  wishlist.db
backend/app/: auth.py  config.py  db.py  main.py  models.py  parse_url.py
backend/app/routes/: share.py  wishlists.py
backend/application/product/: schemas.py  service.py
backend/application/user/: schemas.py  service.py
backend/application/wishlist/: schemas.py  service.py
backend/domain/user/: entities.py  repositories.py  use_cases.py
backend/domain/wishlist/: entities.py  repositories.py  use_cases.py
backend/infra/postgresql/: client.py  user_repository.py  wishlist_repository.py
backend/infra/postgresql/migrations/: 001_initial_schema.sql
backend/presentation/api/: deps.py  routes.py  runtime.py
backend/presentation/api/product/: controllers.py
backend/presentation/api/share/: controllers.py
backend/presentation/api/user/: controllers.py
backend/presentation/api/wishlist/: controllers.py
backend/services/: url_parser.py
backend/src/: index.ts  parseUrl.ts
backend/tests/: conftest.py  test_auth.py  test_parse_url.py  test_wishlist_service.py
clients/: DESIGN.md  build.gradle.kts  gradle.properties  secrets.properties.template  settings.gradle.kts
docs/: ADR-001-kmp-architecture-improvements.md  AUTH_SETUP.md
(+97 files in other folders)
